styles.css
* {
  margin: 0;
  box-sizing: border-box;
}

/* Main Containers */

.container {
  display: grid;
  grid-template-columns: 1fr 4fr;
  grid-template-rows: 1fr 2fr 2fr 2fr;
  height: 100vh;
}

.header {
  display: grid;
  grid-template-columns: 3fr 2fr;
  grid-template-rows: 1fr 1fr;
  grid-column: 2 / 3;
  padding: 20px 30px;
  background-color: white;
}

.sidebar {
  display: grid;
  grid-template-columns: 1fr;
  background-color: #1992d4;
  grid-column: 1;
  grid-row: 1 / 5;
  gap: 50px;
  align-content: start;
  padding-left: 20px;
  padding-top: 20px;
}

.content {
  display: grid;
  grid-template-columns: 3fr 1fr;
  background-color: ;
  /* TODO: is this needed? */
  grid-template-rows: repeat(4, 1fr);
  background-color: #e2e8f0;
  grid-column: 2 / 3;
  grid-row: 2 / 5;
}

/* Header Section */

.search-bar {
  display: grid;
  align-content: center;
  grid-template-columns: 1fr 12fr;
}

.user-nav {
  display: grid;
  grid-template-columns: 40px 40px 150px;
  place-items: center;
  justify-self: end;
  gap: 25px;
}

.user-profile {
  display: grid;
  grid-template-columns: 65px 1fr;
  grid-template-rows: 2;
  gap: 8px;
}

.user-profile-icon {
  align-content: start;
}

.user-actions {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  place-items: center;
  justify-self: end;
  gap: 30px;
}

.search-box {
  border: 3px solid lightblue;
}

/* Side Bar Section */

.sidebar-dashboard {
  display: grid;
  grid-template-columns: 1;
  grid-template-rows: 1;
  display: flex;
  justify-items: center;
  align-items: center;
  font-size: 32px;
  color: white;
  gap: 6px;
  flex-wrap: nowrap;
}

.sidebar-dashboard svg {
  width: 50px;
  height: auto;
  fill: white;
}

.sidebar-nav {
  display: grid;
  grid-template-columns: 1;
  align-content: start;
  gap: 20px;
  margin-bottom: 20px;
}

.sidebar-settings {
  display: grid;
  grid-template-columns: 1;
  align-content: start;
  gap: 20px;
}

/* Content Section */

.projects {
  grid-column: 1;
  grid-row: 1 / 5;
  padding: 24px 24px;
}

.projects h2 {
  font-size: 22px;
  color: black;
  padding-bottom: 12px;
}

.announcements {
  grid-column: 2;
  grid-row: 1 / 3;
  margin-top: 24px;
}

.trending {
  /* TODO: display flex */
  grid-column: 2;
  grid-row: 3 / 5;
}

.cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-auto-rows: 300px;
  gap: 24px;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-color: white;
  border-left: 12px solid #f0b429;
  border-radius: 4px;
  padding: 20px;
  /* margin: 16px; */
}

.card h3 {
  font-size: 18px;
}

.card p {
  font-size: 18px;
  line-height: 1.5;
  padding-top: 8px;
  color: rgb(94, 94, 94);
}

.announcements-container {
  background-color: white;
  margin-right: 24px;
  border-radius: 8px;
  margin-top: 10px;
  padding: 0px 18px;
}

.sub-card {
  padding: 16px 0px;
}

.sub-card h3 {
  font-size: 16px;
}

.sub-card p {
  font-size: 16px;
  padding-top: 8px;
  color: rgb(94, 94, 94);
}

.trend-container {
  background-color: white;
  margin-right: 24px;
  border-radius: 8px;
  margin-top: 10px;
  padding: 18px 18px;
}

.trend-card {
  display: flex;
  justify-content: start;
  align-items: start;
  gap: 8px;
  margin-bottom: 18px;
}

.trend-card img {
  border-radius: 50%;
  width: 32px;
}

.trend-card {
  font-size: 14px;
  color: darkgrey;
}

.trend-user-name {
  font-size: 18px;
  color: black;
}

.sidebar-item svg {
  width: 30px;
  height: auto;
  fill: white;
}

.sidebar-item a {
  text-decoration: none;
}

.sidebar-item:hover {
  color: white;
  text-decoration: underline;
}

.sidebar-item {
  display: flex;
  justify-items: center;
  align-items: center;
  font-size: 24px;
  gap: 10px;
  flex-wrap: nowrap;
}

/* Header Search */

.search-bar svg {
  width: 30px;
  height: auto;
}

.search-box {
  border: 0px;
  border-radius: 16px;
  height: 30px;
  width: 100%;
  outline: 0;
  padding: 2px 8px 2px 8px;
  background-color: #e2e8f0;
  /* TODO: revisit this */
  margin-left: -12px;
}

/* User Profile */

.user-profile img {
  width: 60px;
  height: auto;
  border-radius: 50%;
  /* width: 20px;
  height: auto; */
}

.user-copy {
  margin-top: 3px;
}

.user-copy .greeting {
  font-weight: 500;
  font-size: 18px;
}

.user-copy .user-name {
  font-weight: 600;
  font-size: 28px;
}

/* User Nav */

.user-nav img {
  border-radius: 50%;
  width: 40px;
}

.user-nav svg {
  width: 35px;
  height: auto;
  fill: black;
}

.user-nav svg:hover {
  fill: #1992d4;
}

.user-nav-name {
  display: inline;
  font-weight: 600;
  font-size: 20px;
}

.user-nav-name:hover {
  color: #1992d4;
}

/* User Actions */

.user-actions button {
  color: white;
  font-size: 20px;
  background-color: #1992d4;
  border: 0px;
  padding: 8px 24px;
  border-radius: 20px;
}

/* Projects */

.sharing {
  display: flex;
  gap: 20px;
  justify-content: end;
  align-items: center;
}

.sharing svg {
  width: 32px;
  height: auto;
  fill: darkgray;
}

.sharing svg:hover {
  fill: #1992d4;
}

/* Anchor */

a:visited,
a:active {
  color: white;
}

/* HR */

hr.solid {
  border-top: 3px solid #dedede;
}

